@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2012, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2013, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -62,7 +62,8 @@ class Shader : public StateRenderable
 		/// This is mostly of use for the binding - the parameters()
 		/// function gives more direct access to the contents of the CompoundData
 		/// (it calls readable() or writable() for you).
-		CompoundDataPtr parametersData();
+		CompoundData *parametersData();
+		const CompoundData *parametersData() const;
 
 		/// Sets this shader as the current shader in Renderer.
 		virtual void render( Renderer *renderer ) const;
